# 逐个添加子目录
add_subdirectory(assert)
add_subdirectory(const)
# add_subdirectory(explicit)
# add_subdirectory(extern)
# add_subdirectory(funcPointer)
# add_subdirectory(inline)
# add_subdirectory(PureVirtualFuncAndAbstractClasses)
# add_subdirectory(virtual)
# add_subdirectory(volatile)

# 如果之后增加了 sizeof 或 friend，直接在这里添加即可：
# add_subdirectory(sizeof)